--- a/Properties/launchSettings.json
+++ b/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "ReadXmlForRedirect": {
       "commandName": "Project",
-      "commandLineArgs": "/h",
+      "commandLineArgs": "/r:redirect  ",
       "workingDirectory": "."
     }
   }
